--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6231,3 +6231,104 @@ label,
 .checkbox label {
   font-weight: 300;
 }
+
+
+
+@media (min-width: 1200px) {
+    .logo {
+        width: 100%;
+        margin-right: -500px;
+    }
+}
+
+ header ul{
+    margin-bottom: -15px;
+    padding: 6px;
+    margin: 0px;
+    background-color: #404040;
+    list-style: none;
+
+}
+
+ header ul li{
+    display: inline;
+
+}
+
+ header ul li a{
+    padding: 2px 10px;
+
+    color: #ffffff;
+    /*visual do link*/
+    background-color: #404040;
+    text-decoration: none;
+
+}
+
+#logo{
+    margin-left: 05px;
+    float:left;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+#barra{
+    padding: 2px;
+    background-color: #404040;
+    clear:both;
+}
+
+
+#search{
+    margin-left: 850px;
+}
+
+.button  {
+    color:#08233e;
+    font:2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
+    font-size:70%;
+    padding:5px;
+    
+    background-color: #ffffff;
+    border:1px solid #000000;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    border-radius:5px;
+    border-bottom:1px solid #9f9f9f;
+    -moz-box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+    -webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+    box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
+    cursor:pointer;
+    margin-left: 40px;
+    width:7%;
+}
+.button :hover {
+    background-color:#404040;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 100px;
+    background-color: #404040;
+}
+
+footer ul li img{
+    float: left;
+    margin-left: -400px;
+}
+footer ul li {
+    display:inline-block;
+    text-decoration: none;
+}
+
+footer ul li p  {
+    
+    color:white;
+    text-align: center;
+}
+
+
+
