--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,8 @@ html {
 body {
     width:100%;
   margin: 0;
+
+
 }
 article,
 aside,
@@ -6238,12 +6240,11 @@ label,
 
     .logo {
         width: 100%;
-        margin-right: -500px;
     }
 
 
  header ul{
-    margin-bottom: -15px;
+    margin-bottom: -2%;
     padding: 6px;
     margin: 0px;
     background-color: #404040;
@@ -6267,10 +6268,10 @@ label,
 }
 
 #logo{
-    margin-left: 05px;
+    margin-left: 0.7%;
     float:left;
-    margin-bottom: 15px;
-    margin-top: 10px;
+    margin-bottom: 2%;
+    margin-top: 1.3%;
 }
 
 #barra{
@@ -6281,7 +6282,7 @@ label,
 
 
 #search {
-        margin-left: 850px;
+        margin-left: 62.2%;
 }
 
 .button {
@@ -6318,7 +6319,7 @@ footer {
 }
 
 #footerlogo{
-    margin-left: -160px;
+    margin-left: -50%;
 
 }
 
