--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,11 +4,10 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-body {
-    width:100%;
+html,body {
+    max-width: 100%;
   margin: 0;
-
-
+    overflow-x: hidden;
 }
 article,
 aside,
