--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,8 +8,8 @@ html {
 }
 html,body {
     max-width: 100%;
-  margin: 0;
-    overflow-x: hidden;
+    margin: 0;
+    overflow: hidden;
 }
 article,
 aside,
