--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2228,8 +2228,7 @@ table th[class*="col-"] {
   background-color: #ebcccc;
 }
 .table-responsive {
-  overflow-x: auto;
-  min-height: 0.01%;
+    width: 100% margin-bottom: 15px; overflow-x: auto; overflow-y: hidden; -webkit-overflow-scrolling: touch; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid 000000;
 }
 @media screen and (max-width: 767px) {
   .table-responsive {
@@ -6261,7 +6260,7 @@ label,
 
     }
 
-    .button {
+    .button1 {
         color: #08233e;
         font: 2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
         font-size: 70%;
@@ -6279,6 +6278,24 @@ label,
         cursor: pointer;
         margin-left: 40px;
         width: 7%;
+    }
+
+    .button2 {
+        color: #08233e;
+        font: 2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
+        font-size: 70%;
+        padding: 5px;
+
+        background-color: #ffffff;
+        border: 1px solid #000000;
+        -moz-border-radius: 10px;
+        -webkit-border-radius: 10px;
+        border-radius: 5px;
+        border-bottom: 1px solid #9f9f9f;
+        -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5);
+        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5);
+        cursor: pointer;
     }
 }
  header ul li a{
