Download de ficheiros pdf dos projectos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2061,7 +2061,7 @@ th {
 .table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.42857143;
-  vertical-align: top;
+  vertical-align: middle;
   border-top: 1px solid #dddddd;
 }
 .table > thead > tr > th {
@@ -2248,6 +2248,7 @@ table th[class*="col-"] {
   .table-responsive > .table > tbody > tr > td,
   .table-responsive > .table > tfoot > tr > td {
     white-space: nowrap;
+
   }
   .table-responsive > .table-bordered {
     border: 0;
