Download de ficheiros pdf dos projectos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6623,4 +6623,13 @@ float:left;
     border-radius: 4px;
 }
 
+.img-with-text {
+    text-align: center;
+    width: 120px;
+}
+
+.img-with-text img {
+    display: block;
+    margin: 0 auto;
+}
 
