--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6639,3 +6639,19 @@ float:left;
     margin: 0 auto;
 }
 
+.comment-body{
+    display: inline-block;
+    border: 1px solid #e1e1e8;
+    border-radius: 4px;
+    width: 78%;
+    height: 100%;
+    color: #000000;
+    background-color: #ffffff;
+    overflow: auto;
+
+}
+.comment-info{
+    display: inline-block;
+    width: 20%;
+}
+
