--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6640,14 +6640,14 @@ float:left;
 }
 
 .comment-body{
-    display: inline-block;
+    float: right;
     border: 1px solid #e1e1e8;
     border-radius: 4px;
     width: 78%;
-    height: 100%;
+    height: 130px;
     color: #000000;
     background-color: #ffffff;
-    overflow: auto;
+    padding: inherit;
 
 }
 .comment-info{
